# ccm-eds

./: Cargo.toml
src/: calendar.rs  collection.rs  collections_model.rs  event.rs  lib.rs  manager.rs  provider.rs  resource.rs  timeframe.rs
src/pre_resource/: mod.rs  pre_calendar.rs  pre_collection.rs  pre_event.rs  pre_provider.rs
src/utils/: eds.rs  macros.rs  mod.rs
