[package]
name = "ccm-eds"
version = "0.1.0"
edition = "2024"

[dependencies]
jiff = "0.2.15"
gdk = { version = "0.9", package = "gdk4" }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
tracing = "0.1"
tsparql = { version = "0.6.1", package = "tracker-rs", features = ["v3_5"] }
zbus = "5.9"
